fix errors on git ignore path processing and unicode

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,11 @@ version = "0.6"
 description = "Concatenate a directory full of files into a single prompt for use with LLMs"
 readme = "README.md"
 authors = [{name = "Simon Willison"}]
-license = {text = "Apache-2.0"}
+
 requires-python = ">=3.8"
-classifiers = [
-    "License :: OSI Approved :: Apache Software License"
-]
 dependencies = [
-    "click"
+    "click",
+    "pathspec" 
 ]
 
 [project.urls]
